Update navbar logo text structure
Simplified the logo text by restructuring the HTML elements. This improves readability and ensures a cleaner layout for the logo display. No visual changes were introduced.

--- a/home/fragments/navbar.html
+++ b/home/fragments/navbar.html
@@ -1,9 +1,9 @@
 <nav class="navbar">
   <div class="navbar-container">
     <a href="/index.html" class="logo">
+      <span class="logo-text">Suhrob</span>
       <span class="logo-dot"></span>
-      <span></span>
-      <span class="logo-text">Suhrob Qalandarov</span>
+      <span>Qalandarov</span>
     </a>
     <div class="nav-links">
       <a href="/index.html" class="nav-link">Home</a>
