--- a/home/fragments/footer.html
+++ b/home/fragments/footer.html
@@ -13,7 +13,10 @@
             <div class="footer-brand">
                 <div class="footer-logo">
                     <div class="logo-dot"></div>
-                    <div class="logo-text">Suhrob</div>
+                    <div class="logo-text">
+                        <span class="logo-text">Suhrob</span>
+                        <span>Qalandarov</span>
+                    </div>
                 </div>
                 <p class="footer-tagline">Turning ideas into exceptional digital experiences</p>
             </div>
