Remove redundant class from logo text in navbar
The "logo-text" class was removed as it was not being utilized or referenced. This change simplifies the HTML structure and improves maintainability.

--- a/home/fragments/navbar.html
+++ b/home/fragments/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar">
   <div class="navbar-container">
     <a href="/index.html" class="logo">
-      <span class="logo-text" style="margin-right: 5px;">Suhrob</span>
+      <span style="margin-right: 5px;">Suhrob</span>
       <span>Qalandarov</span>
     </a>
     <div class="nav-links">
